[package]
name = "daylio_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "daylio_tools"
path = "src/lib.rs"

[[bin]]
name = "daylio_tools"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
chrono = { version= "0.4.40", default-features = false, features = ["std"] }
color-eyre = { version = "0.6.3", default-features = false }
nanorand = "0.7.0"
nom = "8.0.0"
nom-language = "0.1.0"
pdftotext = { git="https://github.com/Guekka/pdftotext.git", branch="layout" }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
zip = "2.6.1"

[dev-dependencies]
similar-asserts = "1.7.0"

[profile.dev.package.backtrace]
opt-level = 3
