[package]
name = "daylio_tools"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "daylio_tools"
path = "src/lib.rs"

[[bin]]
name = "daylio_tools"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.44", default-features = false, features = ["std", "serde"] }
clap = { version = "4.5.60", features = ["derive"] }
color-eyre = { version = "0.6.5", default-features = false }
nom = "8.0.0"
nom-language = "0.1.0"
pdftotext = { git = "https://github.com/Guekka/pdftotext.git", branch = "layout" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
zip = "8.1.0"
regex = "1.12.3"
serde_yaml_ng = "0.10.0"
indexmap = { version = "2.13.0", features = ["serde"] }

[dev-dependencies]
similar-asserts = "1.7.0"

[profile.dev.package.backtrace]
opt-level = 3
